objects/System_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True – log debug messages in this org</description>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True – log errors in this org</description>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True – log info messages in this org</description>
        <label>Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Purge_Days__c</fullName>
        <description>The number of days of logs to keep</description>
        <label>Log Purge (Days)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Results__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Custom Search Results</description>
        <label>Search Results (Number)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True – log warning messages in this org</description>
        <label>Warning</label>
        <type>Checkbox</type>
    </fields>
    <label>System Settings</label>
</CustomObject>